Fix whitespace issue with registered-trademark icon in TOC menus

--- a/overrides/css/theme.css
+++ b/overrides/css/theme.css
@@ -127,3 +127,11 @@ code, pre, kbd {
 .md-typeset .admonition {
   font-size: .72rem;
 }
+
+.md-nav__link {
+  justify-content: flex-start;
+}
+
+.md-nav__link span.registered-sign {
+  padding-right: 5px;
+}
